--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,22 @@
     <title>My TODO List</title>
     <script src="utils.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div id='control'>
+    <h1>To Do List</h1>
+    <input type="text" id='text-input'>
+    <select name="priority-selector" id="priority-selector">
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5</option>
+    </select>
+    <button id="add-button">Add</button>
+  </div>
+
+  <div id='view'>
+
+  </div>
+  </body>
 </html>
