--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
   <body>
     <div id='control'>
     <h1>To Do List</h1>
+    <div id='counter'>Zen Mode</div>
     <input type="text" id='text-input'>
     <select name="priority-selector" id="priority-selector">
       <option value="1">1</option>
