--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
     <div id='control'>
     <h1>To Do List</h1>
     <div id='counter'>Zen Mode</div>
+    <span><button id='sort-button'>SORT</button></span>
+    <br>
     <input type="text" id='text-input'>
     <select name="priority-selector" id="priority-selector">
       <option value="1">1</option>
