--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <body>
     <div id='control'>
     <h1>To Do List</h1>
-    <div id='counter'>Zen Mode</div>
+    <div><span id='counter'></span> <span id='counter-text'>Zen Mode</span></div>
     <span><button id='sort-button'>SORT</button></span>
     <br>
     <input type="text" id='text-input'>
