--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- Links to Dosis Font Family (will look into variable fonts )-->
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- Link to background-->
+    <a href='https://pngtree.com/so/yellow-note-paper' hidden>yellow note paper png from pngtree.com</a>
   </head>
 
   <body>
     <div id='control'>
-    <h1>To Do List</h1>
+    <h1 id='title'>To Do List</h1>
     <div><span id='counter'></span> <span id='counter-text'>Zen Mode</span></div>
     <span><button id='sort-button'>SORT</button></span>
     <br>
@@ -36,6 +38,6 @@
       
     </ul>
   </div>
-  </body>
   <script src="./script.js"></script>
+  </body>
 </html>
