--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   <body>
     <div id='control'>
     <h1 id='title'>To Do List</h1>
-    <div><span id='counter'></span> <span id='counter-text'>Zen Mode</span></div>
+    <div id='counter-section'><span id='counter'></span> <span id='counter-text'>Zen Mode</span></div>
     <span><button id='sort-button'>SORT</button></span>
     <br>
     <input type="text" id='text-input'>
