--- a/src/indexv1.html
+++ b/src/indexv1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My TODO List</title>
     <script src="utils.js"></script>
-    <link rel="stylesheet" href="stylenew.css">
+    <link rel="stylesheet" href="style.css">
     <!-- Links to Nunito Font Family -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -19,9 +19,14 @@
   </head>
 
   <body>
-    <h1 id='title'>THE AMAZING CATSLIST</h1>
-  <div id='main'>
     <div id='control'>
+      <h1 id='title'>To Do List</h1>
+      <div id='counter-section'>
+        <span id='counter'></span> 
+        <span id='counter-text'>Zen Mode</span>
+      </div>
+      <span><button id='sort-button'>SORT</button></span>
+      <br>
       <div id='add-section'>
         <input type="text" id='text-input'>
         <select name="priority-selector" id="priority-selector">
@@ -31,12 +36,7 @@
           <option value="4">4</option>
           <option value="5">5</option>
         </select>
-        <button id="add-button">ADD</button>
-        <button id='sort-button'>SORT</button>
-        <span id='counter-section'>
-          <span id='counter'></span> 
-          <span id='counter-text'>Zen Mode</span>
-        </span>
+        <button id="add-button">Add</button>
       </div>
     </div>
 
@@ -47,6 +47,5 @@
     </div>
 
     <script src="./script.js"></script>
-  </div>  
   </body>
 </html>
