--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <h1 id='title'>THE AMAZING CATSLIST</h1>
+    <h1 id='title'>THE AMAZING CASLIST</h1>
   <div id='main'>
     <div id='control'>
       <div id='add-section'>
