--- a/src/indexv1.html
+++ b/src/indexv1.html
@@ -21,11 +21,13 @@
   <body>
     <div id='control'>
       <h1 id='title'>To Do List</h1>
-      <div id='counter-section'>
+      
+      <span id='counter-section'>
         <span id='counter'></span> 
         <span id='counter-text'>Zen Mode</span>
-      </div>
-      <span><button id='sort-button'>SORT</button></span>
+        <button id='sort-button'>SORT</button>
+      </span>
+      
       <br>
       <div id='add-section'>
         <input type="text" id='text-input'>
