--- a/src/indexv1.html
+++ b/src/indexv1.html
@@ -19,6 +19,11 @@
   </head>
 
   <body>
+    <div id='links'>
+      <a href="https://www.instagram.com/cassutoo/" class="fa fa-instagram"></a>
+      <a href="https://github.com/itaicas21" class="fa fa-github"></a>
+      <a href="#" class="fa fa-linkedin"></a>
+    </div>
     <div id='control'>
       <h1 id='title'>To Do List</h1>
       
