--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My TODO List</title>
-    <script src="utils.js"></script>
     <!-- Links to Nunito Font Family -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -42,6 +41,7 @@
           <span id='counter'></span> 
           <span id='counter-text'>Zen Mode</span>
         </span>
+        <div id="spinner"></div>
       </div>
     </div>
 
@@ -50,7 +50,7 @@
       
       </ul>
     </div>
-
+    <script src="utils.js"></script>
     <script src="./script.js"></script>
   </div>  
   </body>
