--- a/src/indexv1.html
+++ b/src/indexv1.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My TODO List</title>
-    <script src="utils.js"></script>
     <link rel="stylesheet" href="style.css">
     <!-- Links to Nunito Font Family -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -44,6 +43,7 @@
           <option value="5">5</option>
         </select>
         <button id="add-button">Add</button>
+        <div id="spinner"></div>
       </div>
     </div>
 
@@ -52,7 +52,7 @@
       
       </ul>
     </div>
-
+    <script src="utils.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
