added spinner to new site+updated dependencies

--- a/src/indexv1.html
+++ b/src/indexv1.html
@@ -52,6 +52,7 @@
       
       </ul>
     </div>
+    <script src="../../backend-express/index.js"></script>
     <script src="utils.js"></script>
     <script src="./script.js"></script>
   </body>
