--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
       
       </ul>
     </div>
-    <script src="../../backend-express/index.js"></script>
+    <script src="backend-express/index.js"></script>
     <script src="utils.js"></script>
     <script src="./script.js"></script>
     
